加入显示天气信息的功能，里面的putExtra功能不稳定

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">SunnyWeather</string>
+    <string name="verticalLine">|</string>
+    <string name="forecast">预报</string>
+    <string name="lifeIndex">生活指数</string>
+    <string name="cold">感冒</string>
+    <string name="dressing">穿衣</string>
+    <string name="ultravioletRays">实时紫外线</string>
+    <string name="washCar">洗车</string>
 </resources>
